# rukaibox_firmware

./: .gitignore  Cargo.toml  config.kdl  dist-workspace.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: testing.yml
kdl_config/src/: arrayvec.rs  integers.rs  lib.rs
kdl_config_derive/src/: kdl_config_finalize.rs  lib.rs
rukaibox_config/: Cargo.toml
rukaibox_config/src/: lib.rs
rukaibox_firmware/: Cargo.toml
rukaibox_firmware/.cargo/: config.toml
rukaibox_firmware/src/: config.rs  gamecube_controller.rs  input.rs  main.rs  profile.rs  project_plus.rs  socd.rs
rukaibox_firmware/src/profile/: project_plus.rs  rivals2.rs  ultimate.rs
rukaibox_flash/: Cargo.toml
rukaibox_flash/src/: config.rs  flash.rs  main.rs
scripts/: clippy.sh  fmt.sh  upgrades.sh
