[workspace]
members = [ "kdl_config",
    "kdl_config_derive",
    "rukaibox_flash"
]
exclude = [
    "rukaibox_firmware",
]
resolver = "2"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.dev]
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
