[package]
name = "rukaibox_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
pio = "0.2.1"
rp-pico = "0.9.0"
rp2040-hal = "0.10.0"
# broken with cargo bin deps nightly feature
#pio-proc = "0.2.2"

[build-dependencies]
