[package]
name = "rukaibox_flash"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/rukai/rukaibox_firmware"

[dependencies]
picoboot-rs = "0.2.0"
rusb = "0.9.4"
uf2-decode = "0.2.0"
rukaibox_firmware = { path = "../rukaibox_firmware", artifact = "bin", target = "thumbv6m-none-eabi" }
goblin = "0.9.3"
miette = "7.4.0"
knus = "3.2.0"
rukaibox_config = { path = "../rukaibox_config" }